--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
     background: #8c0bcd;
 }
+
 h1 {
-    style="text-align: center"
+   text-align: center;
 }
+
 p {
     text-align: center;
+}
+
+#missão{
+    font-size: ;
 }
 em strong {
     color: purple;
