--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #8c0bcd;
+    background: #000000;
 }
 
 h1 {
@@ -11,8 +11,8 @@ p {
 }
 
 #missão{
-    font-size: ;
+    font-size: 20px
 }
 em strong {
-    color: purple;
+    color: rgba(0, 0, 0, 0);
 }
