--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #000000;
+    background: #048d76;
 }
 
 h1 {
@@ -8,11 +8,22 @@ h1 {
 
 p {
     text-align: center;
+    font-size: 20px;
 }
 
 #missão{
-    font-size: 20px
+    color: blueviolet;
 }
 em strong {
     color: rgba(0, 0, 0, 0);
+}
+
+a {
+    text-decoration: none ;
+    text-decoration:transparent ;
+}
+
+a :hover {
+
+    color: rgb(248, 248, 248);
 }
