--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 body {
-    background: #048d76;
+    background: #dcdfde;
 }
 
 h1 {
    text-align: center;
 }
-
+#banner{
+    
+}
 p {
     text-align: center;
     font-size: 20px;
 }
 
 #missão{
-    color: blueviolet;
+    color: rgb(83, 43, 226);
 }
 em strong {
     color: rgba(0, 0, 0, 0);
@@ -25,5 +27,5 @@ a {
 
 a :hover {
 
-    color: rgb(248, 248, 248);
+    color: rgb(0, 0, 0);
 }
